fixed check warnings
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@75 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm/NEWS
+++ b/pkg/gmm/NEWS
@@ -1,3 +1,9 @@
+Changes in version 1.5-1
+
+o Added importFrom element
+o Added element df.residual to gmm objects to allow F-type linearHypothesis 
+o Removed the unnecessary ls estimations in the first stage 2SLS
+
 Changes in version 1.5-0
 
 o Thanks to Eric Zivot. Many improvements are based on his testings of the package.
