Added constrOptim to fixed W gmm
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@77 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm/NEWS
+++ b/pkg/gmm/NEWS
@@ -1,3 +1,7 @@
+Changes in version 1.5-2
+
+o Added constrOptim to nonlinear gmm() with fixed W
+
 Changes in version 1.5-1
 
 o Added importFrom element
