--- a/pkg/gmm/NEWS
+++ b/pkg/gmm/NEWS
@@ -1,3 +1,7 @@
+Changes in version 1.5-3
+
+o Fixed a typo in FinRes.R file. It was preventing to compute the proper vcov matrix for a very special case (fixed weights)
+
 Changes in version 1.5-2
 
 o Added constrOptim to nonlinear gmm() with fixed W
