--- a/pkg/gmm/NEWS
+++ b/pkg/gmm/NEWS
@@ -1,8 +1,17 @@
-Changes in version 1.5-3
+Changes in version 1.6-0
 
 o Fixed a typo in FinRes.R file. It was preventing to compute the proper vcov matrix for a very special case (fixed weights)
 o Added Helinger distance and Exponentially tilted Helinger estimator to gel()
 o Fixed the LR test of ETEL in gel()
+o Cleaned a lot of the codes. In particular, a single moment function and its gradiant function is used now.
+  There is also a common weighting matrix generator function. The main goal is to make it more flexible and give the possibility
+  of creating weighting matrix based on other assumption such as clustering.
+o For GEL with smooth=TRUE, the weights were not fixed which was creating problems of convergence. 
+o Add the option of fixing the value of some coefficient in gel as it as already the case for gmmm.
+o It is no possible to provide gmm with the gradiant function when constrOptim is used.
+o There is now an evalGmm() function to create a gmm object with a given fixed vector. Not estimation is done, but the bandwidth and weights
+  for the HAC estimator are generated. It is possible to give a different vector os parameters for the moment function and the weighting matrix.
+o Fixed NAMESPACE to avoid the notes given by CRAN.
 
 Changes in version 1.5-2
 
