Added the option to avoid the computation of the covariance matrix
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@112 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm/NEWS
+++ b/pkg/gmm/NEWS
@@ -1,3 +1,9 @@
+Changes in version 1.6-2
+
+o Fixed a bug with iterative GMM from the previous version
+o Added the option onlyCoefficients=FALSE to gmm() and gel(). If set to TRUE, no covariance matrix is computed. Only the coefficients
+  objective and the lambdas (for gel only) are returned.
+
 Changes in version 1.6-1
 
 o Added the function bwWilhelm() to compute the optimal bandwidth of Wilhelm(2015).
