--- a/pkg/gmm/NEWS
+++ b/pkg/gmm/NEWS
@@ -6,6 +6,8 @@ o Added the option onlyCoefficients=FALSE to gmm() and gel(). If set to TRUE, no
 o In previous versions, the HAC weighting matrix for linear models was computed without specifying that the first column of the
   instrument matrix was a column of ones (with its name being "(Intercept)"). It makes a difference when computing the bandwidth with
   bwNeweyWest. The new version, takes it into account. It is not possible to obtain the same sandwich covariance matrix with gmm and OLS.
+o In previous versions, the weighting matrix and, as a result, the standard errors were based on the small sample adjusted vcovHAC for weakly dependent
+  processes. The adjustment is not justified for GMM. The option adjust=FALSE is therefore added to vcovHAC in .myKernHAC()
 
 Changes in version 1.6-1
 
