worked on the vignette and add functionalities
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@122 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm4/vignettes/empir.bib
+++ b/pkg/gmm4/vignettes/empir.bib
@@ -73,6 +73,41 @@ publisher = {Cambridge, MA: MIT Press},
 year = {2002},
 }
 
+@Book{greene12,
+author = {Greene, W. H.},
+title = {Econometric Analysis, 7th edition},
+publisher = {Prentice Hall},
+year = {2012},
+}
+
+@Book{hayashi00,
+author = {Hayashi, FH.},
+title = {Econometrics},
+publisher = {Princeton University Press},
+year = {2000},
+}
+
+@Book{hayashi00,
+author = {Hayashi, FH.},
+title = {Econometrics},
+publisher = {Princeton University Press},
+year = {2000},
+}
+
+@Book{stock-watson15,
+author = {Stock, J.H. and Watson, M.W.},
+title = {Introduction to Econometrics},
+publisher = {Pearson},
+year = {2015},
+}
+
+@Book{wooldridge16,
+author = {Wooldridge, J. M.},
+title = {Introductory Econometrics, A Modern Approach, 6th edition},
+publisher = {Cengage Learning},
+year = {2016},
+}
+
 @Book{cochrane01,
 author = {Cochrane, J. H.},
 title = {Asset Pricing},
@@ -814,3 +849,15 @@ publisher = {Princeton University Press},
 title = {Time Series Analysis},
 year = {1994},
 }
+
+
+  @Article{leifeld13,
+    title = {{texreg}: Conversion of Statistical Model Output in {R} to {\LaTeX} and {HTML} Tables},
+    author = {Philip Leifeld},
+    journal = {Journal of Statistical Software},
+    year = {2013},
+    volume = {55},
+    number = {8},
+    pages = {1--24},
+    url = {http://www.jstatsoft.org/v55/i08/},
+  }
